refactor verification partner feature
